# WP

./: README.md  flake.nix  pyproject.toml  start.sh  tests.py
binary_options_bot/: __main__.py  handlers.py
binary_options_bot/blockchain/: blockchain.py
binary_options_bot/blockchain/chain_data/: block_0_open.json
binary_options_bot/database/: models.py
binary_options_webapp/: manage.py
binary_options_webapp/binary_options_webapp/: asgi.py  settings.py  urls.py  wsgi.py
binary_options_webapp/core/: forms.py  models.py  urls.py  views.py
binary_options_webapp/core/migrations/: 0001_initial.py  0002_alter_block_state.py  0003_alter_userprofile_idea_ballance_and_more.py  0004_alter_bet_id_alter_block_id_and_more.py  0005_alter_userprofile_user.py  0006_remove_userprofile_tg_user_id.py
binary_options_webapp/core/static/css/: deposit.css  profile.css  style.css  transaction_history.css
binary_options_webapp/core/static/scripts/: test.js  test1.js
binary_options_webapp/core/templates/: bet.html  deposit.html  profile.html  sell.html  transaction_history.html
docs/: тз.docx
html/: index.html
html/src/css/: main.css
scripts/: start.sh  start_nix.sh
src/: __main__.py
src/block_gen/: blockchain.py
src/css/: main.css
src/database/: models.py
tests/: tests.py
web-crypto/: index.html
web-crypto/main/: index.html
web-crypto/src/css/: main.css
