[tool.poetry]
package-mode = false
name = "binary-options-bot"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0"
python-telegram-bot = "^21.5"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

