[tool.poetry]
package-mode = false
name = "binary_options_bot"
version = "0.1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.5"
python-dotenv = "^1.0"
django = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
